# ophidian

./: .env.example  .gitignore  README.md  test_pt_load.py  walkthrough.md
colab/: Snake_Detector_Training.ipynb  export_tflite_int8.ipynb  train_snake_yolov8.py
docker/: Dockerfile  docker-compose.yml
inference/: CMakeLists.txt  main.cpp  snake_detector.cpp  snake_detector.h
models/: .gitkeep
pi_server/: app.py
scripts/: auto_deploy.py  build_docker.sh  build_on_pi.sh  deploy_and_start.py  deploy_to_pi.ps1  run_on_pi.sh  setup_pi.sh  setup_pi_tflite.sh  start_flask.sh
snake_model_for_pi/: README.txt  metadata.yaml  model_ncnn.py
snake_model_int8_final/: best_int8.tflite
web_test/: index.html  non.avif  server.py  test_video.py
